Lesson 9: add sort, search & filters
